# 3dof_leg_n4

./: README.md
leg_3dof_test/: .rosinstall  .rosinstall.bak
leg_3dof_test/.catkin_tools/profiles/default/: devel_collisions.txt
leg_3dof_test/src/demo/demo_trajectory/: CMakeLists.txt  package.xml
leg_3dof_test/src/demo/demo_trajectory/launch/: trajectory_unlimit.launch
leg_3dof_test/src/demo/demo_trajectory/src/move_group/: move_group1.cpp
leg_3dof_test/src/demo/demo_trajectory/src/python/unlimited/: left_move.cpp  right_move.cpp
leg_3dof_test/src/demo/leg_description/: CMakeLists.txt  package.xml
leg_3dof_test/src/demo/leg_description/meshes/: llink1.STL  llink2.STL  llink3.STL  rlink1.STL  rlink2.STL  rlink3.STL
leg_3dof_test/src/demo/leg_description/urdf/: leg_chuanv3.urdf  urdf_trajectory.urdf  urdf_trajectory_unlimit.urdf
leg_3dof_test/src/demo/leg_gazebo/: CMakeLists.txt  package.xml
leg_3dof_test/src/demo/leg_gazebo/config/: joint_trajectory_controller.yaml  leg_pid_control.yaml
leg_3dof_test/src/demo/leg_gazebo/launch/: leg_robot.launch  leg_tf2.launch  leg_topic_and_msg.launch  leg_trajectory.launch  publish_and_subscribe.launch  test_csv.launch  test_service.launch
leg_3dof_test/src/demo/leg_gazebo/msg/: RobotMotion.msg  RobotPosition.msg
leg_3dof_test/src/demo/leg_gazebo/scripts/: combined_data.csv  data_rad.xlsx  ik_makers.py  leg_chuanv3.csv  leg_read_csv.py  no1_service_start_stop.py  no1_topic_and_msg_control.py  no2_service_tra_ve_mac_dinh.py  no4_them_che_do_test_dung_mo_phong.py  read_xlxs.py
leg_3dof_test/src/demo/leg_rviz1/: CMakeLists.txt
leg_3dof_test/src/demo/leg_rviz1/launch/: leg_rviz.launch
leg_3dof_test/src/demo/leg_rviz1/rviz/: leg_rviz.rviz
leg_3dof_test/src/demo/moveit12/: .setup_assistant  CMakeLists.txt
leg_3dof_test/src/demo/moveit12/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  new_ros_controllers.yaml  ompl_planning.yaml  stomp_planning.yaml  urdf_trajectory.srdf
leg_3dof_test/src/demo/moveit12/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dieu_khien_robot.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+3 more)
leg_3dof_test/src/demo/moveit_v6/: .setup_assistant  CMakeLists.txt
leg_3dof_test/src/demo/test_all123/: CMakeLists.txt
leg_3dof_test/src/demo/test_all123/launch/: display_goc_khop.launch  leg_control.launch  leg_robot.launch  publish_and_subscribe.launch  service1_start_stop_data.launch  service2_trang_thai_cho_truoc.launch  tf2_world_base.launch
leg_3dof_test/src/demo/test_all123/src/display/: no3_displaydata.py
leg_3dof_test/src/demo/test_all123/src/publish_subscribe/: no1_publish_data_csv.py  no2_subscribt_data_csv.py
leg_3dof_test/src/demo/test_all123/src/service/srv/: CsvControl.srv
leg_3dof_test/src/demo/test_all123/src/tf2/: no1_tf2_publish.py  no2_tf2_listener.py
(+23 files in other folders)
